sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: object string is not a member of package java.lang
  java.lang.string("ok");
            ^